--- a/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Profile/edit_content.html.twig
@@ -59,7 +59,9 @@
 
 <button class="btn btn-success" type="submit">{{ 'profile.edit.submit'|trans }}</button>
 {{ form_end(form) }}
-<script type="text/javascript">
+
+
+<!--<script type="text/javascript">
     $(".label_form input").focus(function () {
         $(".glyphicon-search-blue").removeClass("glyphicon-search-blue");
         $(this).prev("label").addClass("glyphicon-search-blue");
@@ -86,3 +88,4 @@
 
 
 </script>
+-->
