--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -69,44 +69,52 @@
 
     function appletReady() {
 
+
+
+
         //document.javaapplet.setUploadUrl('http://sesile.dev.cd/app_dev.php/doc/uploadfile') // Dev
         document.javaapplet.setUploadUrl('http://' + window.location.hostname + '/doc/uploadfile') // Prod
 
         var divmethod = document.getElementById('listemethod');
-        /*
-         var selectmethod = document.createElement('select');
-         selectmethod.setAttribute('name','selectmethod');
-         selectmethod.setAttribute('id','selectmethod');
 
-         var element = document.createElement('option');
-         element.setAttribute('value',0);
-         element.text = 'Xemelios';
-         selectmethod.appendChild(element);
-         set
-
-         divmethod.appendChild(selectmethod);*/
         var divcertif = document.getElementById('listecertif');
         var selectcertif = document.createElement('select');
         selectcertif.setAttribute('name', 'selectcertif');
         selectcertif.setAttribute('id', 'selectcertif');
         var nbcertif = document.javaapplet.getNumberSigningCertificates();
-        var i = 0;
-        while (i < nbcertif) {
-            var nomcertif = document.javaapplet.getSigningCertificateName(i);
+
+        var a = 0;
+        if(nbcertif > 1) {
+   while (a < nbcertif - 1) {
+
+                var certAlias = document.javaapplet.getCertificatAlias(a);
+                alert(certAlias)
+                var element = document.createElement('option');
+                element.setAttribute('value', a);
+                element.text = certAlias;
+                selectcertif.appendChild(element);
+
+                alert(element.text)
+                a++;
+
+            }
+            divcertif.appendChild(selectcertif);
+            $('#bouttons').show('slow');
+            setStatusText('Pret à signer');
+        }
+        else {
+            var nomcertif = document.javaapplet.getSigningCertificateName(0);
             var element = document.createElement('option');
-            element.setAttribute('value', i);
+            element.setAttribute('value', 0);
             element.text = nomcertif;
             selectcertif.appendChild(element);
-            i = i + 1;
-            /*  var options = selectcertif.options;
-             options[options.length] = new Option(document.javaapplet.getSigningCertificateName(i), i);*/
-        }
-        divcertif.appendChild(selectcertif);
-        $('#bouttons').show('slow');
-        setStatusText('Pret à signer');
 
-
+            divcertif.appendChild(selectcertif);
+            $('#bouttons').show('slow');
+            setStatusText('Pret à signer');
+            }
     }
+
 
     //function pour faire apparaître le bouton signer
     function test() {
@@ -215,11 +223,6 @@
     }
 
 </script>
-
-
-
-
-
 
 
 
