--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -65,7 +65,7 @@
 
 <div>
     <br/>
-    <button type="submit" class="btn btn-success">Envoyer</button>
+    <button type="submit" class="btn btn-success" id="mybtn">Envoyer</button>
 </div>
 <script type="text/javascript">
     var nowTemp = new Date();
