--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -58,7 +58,8 @@
 </script>
 
 <script type="text/javascript">
-    var docstosign = {{ docstosign|json_encode|raw }}
+    var docstosign =
+    {{ docstosign|json_encode|raw }}
 
 
     var attributes = {width: 1, height: 1, id: "javaapplet"};
@@ -84,8 +85,8 @@
         var nbcertif = document.javaapplet.getNumberSigningCertificates();
 
         var a = 0;
-        if(nbcertif > 1) {
-   while (a < nbcertif - 1) {
+        if (nbcertif > 1) {
+            while (a < nbcertif - 1) {
 
                 var certAlias = document.javaapplet.getCertificatAlias(a);
                 alert(certAlias)
@@ -112,7 +113,7 @@
             divcertif.appendChild(selectcertif);
             $('#bouttons').show('slow');
             setStatusText('Pret à signer');
-            }
+        }
     }
 
 
@@ -211,7 +212,8 @@
         var certif = document.getElementById('selectcertif');
         //alert('lancement signature '+method.value+'  '+certif.value);
 
-        nbfic = {{docstosign|length  }}
+        nbfic =
+        {{docstosign|length  }}
 
         if (nbfic > 0) {
             document.javaapplet.launchSigningWithCertificate(certif.value);
