--- a/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
@@ -38,28 +38,25 @@
     }
 
 
-
-
-
-
     /* Bouton grisé lors de l'ajout de fichier  */
 
-    dropzone.on("addedfile", function(file) {
-        $('#Mybutton').attr('disabled',true);
+    dropzone.on("addedfile", function (file) {
+        $('#Mybutton').attr('disabled', true);
 
-        file.previewElement.addEventListener("click", function() { myDropzone.removeFile(file); });
+        file.previewElement.addEventListener("click", function () {
+            myDropzone.removeFile(file);
+        });
     });
 
 
+    /* Bouton dégrisé quand le chargement est terminée  */
 
- /* Bouton dégrisé quand le chargement est terminée  */
-
-    dropzone.on("success", function(file) {
-        $('#Mybutton').attr('disabled',false);
-        file.previewElement.addEventListener("click", function() { myDropzone.removeFile(file); });
+    dropzone.on("success", function (file) {
+        $('#Mybutton').attr('disabled', false);
+        file.previewElement.addEventListener("click", function () {
+            myDropzone.removeFile(file);
+        });
     });
-
-
 
 
     /*Fonction pour ajouter fichier dans le dropzone "classeur à valider"*/
@@ -70,11 +67,9 @@
             $('#documentcontent').append("<input type='hidden' name='" + serverfilename + "' value='" + originalname + "'> ");
 
 
-
         });
 
     });
-
 
 
     /* Ajout de fichier selon Format : zip; pdf, png */
@@ -137,7 +132,6 @@
             if (file.type == "text/plain") {
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/TXT/icon_txt_256.png') }}");
             }
-
 
 
             $(this).attr("onmouseover", "");
