correction pbrecup pes signé 2

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -182,18 +182,20 @@
                value="{{ classeur.validation  | date('d/m/Y') }}"/>
 
 
+        {% if not walidated %}
 
+            <style>
+                #documentcontent {
+                    opacity: .5;
+                    pointer-events: none;
 
-
-
+                }
+            </style>
+        {% endif %}
 
         <style>
 
-            #documentcontent {
-                opacity: .5;
-                pointer-events: none;
 
-            }
 
             #circuit {
 
