--- a/src/Sesile/ClasseurBundle/Resources/views/Mail/nouveau.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Mail/nouveau.html.twig
@@ -4,4 +4,4 @@ Un nouveau classeur vient d'être déposé par {{ deposant }}
 <br>
 Il devra être validé avant le {{ date_limite | date('d/m/Y') }}..
 
-Lien vers le classeur {{ lien }}
+Lien vers le classeur <a href ="">{{ lien }}</a>
