--- a/src/Sesile/ClasseurBundle/Resources/views/Mail/refuse.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Mail/refuse.html.twig
@@ -2,4 +2,4 @@ Le classeur "{{ titre_classeur }}" vient d'être refusé par {{ validant }}
 <br>
 Il devra être corrigé et validé avant le {{ date_limite | date('d/m/Y') }}..<br>
 
-Lien vers le classeur {{ lien }}
+Lien vers le classeur <a href ="{{ lien }}"></a>
