--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
@@ -11,8 +11,8 @@
                 data-whatever="@mdo" class=".bs-example-modal-lg" >
             <span class="glyphicon glyphicon-remove"></span>
             &nbsp;Refuser
-
         </button>
+
 
 
     {% else %}
@@ -25,14 +25,11 @@
                 data-whatever="@mdo">
             <span class="glyphicon glyphicon-remove"></span>
             &nbsp;Refuser
-
         </button>
 
 
+
     {% endif %}
-
-
-
 
 
 
@@ -69,7 +66,7 @@
 
 
 <style>
-/*    #enregister {
+/* .   #enregister {
         opacity: .5;
         pointer-events: none;
     }
