--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -71,6 +71,14 @@
                             Droit de retractation
                         </a>
                     </li>
+                    {% if is_granted('ROLE_AGENT_SICTIAM') %}
+                        <li>
+                            <a href="{{ path("liste_classeurs_retired") }}">
+                                <img class="arrows" src="{{ asset("/images/arrowblue.png") }}"/>
+                                Suppression de classeur
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
             </li>
             {% if is_granted('ROLE_ADMIN') and not is_granted('ROLE_SUPER_ADMIN') %}
