--- a/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
@@ -1,5 +1,13 @@
 <div id="doc">
     <div id="fichiers" class="dropzone"></div>
+    <br>
+    {% if classeur.type == 'Helios' %}
+        <a href="{{ path('visu', {'id':classeur.documents[0].id}) }}"
+           class="btn btn-warning" role="button">
+            <span class="glyphicon glyphicon-eye-open"></span>
+            &nbsp;Visualiser
+        </a>
+    {% endif %}
     <div id="filedescription" style="display:none"></div>
 
 </div>
