--- a/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
@@ -2,7 +2,7 @@
 
 <script type="text/javascript">
     var fNewDoc = false;
-    var EditDocumentButton = null;
+    var EditDocumentButton = document.getElementById('modifbutton');
     try {
         EditDocumentButton = new ActiveXObject('SharePoint.OpenDocuments.3');
         if (EditDocumentButton != null) {
