--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -193,9 +193,9 @@
                                             sClass: "center",
                                             bSortable: false,
                                             "mRender": function ( data, type, full ) {
-                                                var retour = '<a href="' + Routing.generate('classeur_edit', {id: data.id}) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
+                                                var retour = '<a class="col-sm-6" href="' + Routing.generate('classeur_edit', {id: data.id}) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
                                                 if (data.idDoc) {
-                                                    retour += '&nbsp;&nbsp;<a href="' + Routing.generate('visu', {id: data.idDoc}) + '"><span class="glyphicon glyphicon-eye-open"></span></a>';
+                                                    retour += '<a class="col-sm-6" href="' + Routing.generate('visu', {id: data.idDoc}) + '"><span class="glyphicon glyphicon-eye-open"></span></a>';
                                                 }
                                                 return retour;
                                             }
@@ -254,9 +254,9 @@
                                             sClass: "center",
                                             bSortable: false,
                                             "mRender": function ( data, type, full ) {
-                                                var retour = '<a href="' + Routing.generate('classeur_edit', {id: data.id}) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
+                                                var retour = '<a class="col-sm-6" href="' + Routing.generate('classeur_edit', {id: data.id}) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
                                                 if (data.idDoc) {
-                                                    retour += '&nbsp;&nbsp;<a href="' + Routing.generate('visu', {id: data.idDoc}) + '"><span class="glyphicon glyphicon-eye-open"></span></a>';
+                                                    retour += '<a class="col-sm-6" href="' + Routing.generate('visu', {id: data.idDoc}) + '"><span class="glyphicon glyphicon-eye-open"></span></a>';
                                                 }
                                                 return retour;
                                             }
