faisage joli du code visualiseur

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/a_valider.html.twig
@@ -58,7 +58,7 @@
                     "mRender": function ( data, type, full ) {
                         var retour = '<a class="col-sm-6" href="' + Routing.generate('classeur_edit', {id: data.id}) + '"><span class="glyphicon glyphicon-pencil"></span></a>';
                         if (data.idDoc) {
-                            retour += '&nbsp;&nbsp;<a class="col-sm-6"href="' + Routing.generate('visu', {id: data.idDoc}) + '"><span class="glyphicon glyphicon-eye-open"></span></a>';
+                            retour += '<a class="col-sm-6"href="' + Routing.generate('visu', {id: data.idDoc}) + '"><span class="glyphicon glyphicon-eye-open"></span></a>';
                         }
                         return retour;
                     }
