--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="{{ asset("/css/bootstrapValidator.min.css") }}"/>
-<script type="text/javascript" src="{{ asset("/js/js/bootstrapValidator.min.js") }}"></script>
+<!--<link rel="stylesheet" href="{{ asset("/css/bootstrapValidator.min.css") }}"/>
+<script type="text/javascript" src="{{ asset("/js/js/bootstrapValidator.min.js") }}"></script> -->
 
 <script type="text/javascript" src="{{ asset("/js/bootstrap-datepicker.js") }}"></script>
 <link rel="stylesheet" type="text/css" href="{{ asset("/css/datepicker.css") }}">
