--- a/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
@@ -6,34 +6,34 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="row">
-                <div class="col-lg-4"><label>Numéro du bordereau</label></div>
+                <div class="col-lg-3"><label>Numéro</label></div>
                 <div class="col-lg-4"> {{ Bord.id }} </div>
             </div>
             <div class="row">
-                <div class="col-lg-4"><label>Type de bordereau</label></div>
+                <div class="col-lg-3"><label>Type</label></div>
                 <div class="col-lg-4">{{ Bord.type }}</div>
             </div>
             <div class="row">
-                <div class="col-lg-4"><label>Date d'émission du bordereau</label></div>
+                <div class="col-lg-3"><label>Date d'émission</label></div>
                 <div class="col-lg-4"> {{ Bord.dateEm }} </div>
             </div>
             <div class="row">
-                <div class="col-lg-4"><label>Nombre de pièces</label></div>
+                <div class="col-lg-3"><label>Nombre de pièces</label></div>
                 <div class="col-lg-4">{{ Bord.nbPiece }}</div>
             </div>
             <div class="row">
-                <div class="col-lg-4"><label>Montant Bordereau</label></div>
+                <div class="col-lg-3"><label>Montant</label></div>
                 <div class="col-lg-4">{{ Bord.mtBordHT }}</div>
             </div>
 
         </div>
         <div class="col-lg-6">
             <div class="row">
-                <div class="col-lg-4"><label>Exercice</label></div>
+                <div class="col-lg-3"><label>Exercice</label></div>
                 <div class="col-lg-4">{{ Bord.exercice }}</div>
             </div>
             <div class="row">
-                <div class="col-lg-4"><label>Cumul annuel</label></div>
+                <div class="col-lg-3"><label>Cumul annuel</label></div>
                 <div class="col-lg-4">{{ Bord.mtCumulAnnuel }}</div>
             </div>
         </div>
