--- a/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visu.html.twig
@@ -8,7 +8,7 @@
         </div>
         <div class="col-lg-12">
             <div class="form-group">
-                <label for="bordx" class="col-lg-2 ">Choix</label>
+                <label for="bordx" class="col-lg-2 ">Bordereau</label>
 
                 <div class="col-lg-4">
                     <select id="bordx" class="col-lg-4">
@@ -90,6 +90,3 @@
 
     </script>
 {% endblock %}
-
-
-
