correction probleme ajout classeur sous chrome

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -70,9 +70,10 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $('#Mybutton').click(function () {
-            $(this).attr('disabled', true);
+            $(this).addClass('disabled')
+            //$('#new_classeur').submit();
             setTimeout(function () {
-                $('#Mybutton').attr('disabled', false);
+                $('#Mybutton').removeClass('disabled');
             }, 2000)
         });
     });
