Test de Fred sur elpadre.html.twig

--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -70,7 +70,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         $('#Mybutton').click(function () {
-            $(this).addClass('disabled')
+            $(this).addClass('disabled');
             //$('#new_classeur').submit();
             setTimeout(function () {
                 $('#Mybutton').removeClass('disabled');
