--- a/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Formulaires/elpadre.html.twig
@@ -72,6 +72,7 @@
         $('#Mybutton').click(function () {
             $(this).addClass('disabled');
             //$('#new_classeur').submit();
+            // coucou
             setTimeout(function () {
                 $('#Mybutton').removeClass('disabled');
             }, 2000)
